// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb has a separator prop that can be a custom component 1`] = `
<div
  className="ais-Breadcrumb"
>
  <div
    className="ais-Breadcrumb-body ais-body"
  >
    <ul
      className="ais-Breadcrumb-list"
    >
      <li
        className="ais-Breadcrumb-item"
      >
        <a
          className="ais-Breadcrumb-link"
          href="#"
          onClick={[Function]}
        >
          Home
        </a>
      </li>
      <span>
        <li
          className="ais-Breadcrumb-item"
        >
          <span>
            🔍
          </span>
        </li>
        <li
          className="ais-Breadcrumb-item"
        >
          <a
            className="ais-Breadcrumb-link"
            href="#"
            onClick={[Function]}
          >
            white
          </a>
        </li>
      </span>
      <span>
        <li
          className="ais-Breadcrumb-item"
        >
          <span>
            🔍
          </span>
        </li>
        <li
          className="ais-Breadcrumb-item"
        >
          <a
            className="ais-Breadcrumb-link"
            href="#"
            onClick={[Function]}
          >
            white1
          </a>
        </li>
      </span>
      <span>
        <li
          className="ais-Breadcrumb-item"
        >
          <span>
            🔍
          </span>
        </li>
        <li
          className="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
        >
          white1.1
        </li>
      </span>
    </ul>
  </div>
</div>
`;

exports[`Breadcrumb has customizable translations 1`] = `
<div
  className="ais-Breadcrumb"
>
  <div
    className="ais-Breadcrumb-body ais-body"
  >
    <ul
      className="ais-Breadcrumb-list"
    >
      <li
        className="ais-Breadcrumb-item"
      >
        <a
          className="ais-Breadcrumb-link"
          href="#"
          onClick={[Function]}
        >
          ROOT_LABEL
        </a>
      </li>
      <span>
        <li
          className="ais-Breadcrumb-item"
        />
        <li
          className="ais-Breadcrumb-item"
        >
          <a
            className="ais-Breadcrumb-link"
            href="#"
            onClick={[Function]}
          >
            white
          </a>
        </li>
      </span>
      <span>
        <li
          className="ais-Breadcrumb-item"
        />
        <li
          className="ais-Breadcrumb-item"
        >
          <a
            className="ais-Breadcrumb-link"
            href="#"
            onClick={[Function]}
          >
            white1
          </a>
        </li>
      </span>
      <span>
        <li
          className="ais-Breadcrumb-item"
        />
        <li
          className="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
        >
          white1.1
        </li>
      </span>
    </ul>
  </div>
</div>
`;

exports[`Breadcrumb outputs the default breadcrumb 1`] = `
<div
  className="ais-Breadcrumb"
>
  <div
    className="ais-Breadcrumb-body ais-body"
  >
    <ul
      className="ais-Breadcrumb-list"
    >
      <li
        className="ais-Breadcrumb-item"
      >
        <a
          className="ais-Breadcrumb-link"
          href="#"
          onClick={[Function]}
        >
          Home
        </a>
      </li>
      <span>
        <li
          className="ais-Breadcrumb-item"
        />
        <li
          className="ais-Breadcrumb-item"
        >
          <a
            className="ais-Breadcrumb-link"
            href="#"
            onClick={[Function]}
          >
            white
          </a>
        </li>
      </span>
      <span>
        <li
          className="ais-Breadcrumb-item"
        />
        <li
          className="ais-Breadcrumb-item"
        >
          <a
            className="ais-Breadcrumb-link"
            href="#"
            onClick={[Function]}
          >
            white1
          </a>
        </li>
      </span>
      <span>
        <li
          className="ais-Breadcrumb-item"
        />
        <li
          className="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
        >
          white1.1
        </li>
      </span>
    </ul>
  </div>
</div>
`;
